--- a/2020/Intro-to-TypeScript/demo/livedemo/package.json
+++ b/2020/Intro-to-TypeScript/demo/livedemo/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "livedemo",
+  "name": "popup-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app/main.js",
   "scripts": {
-    "start": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc -w",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@types/arcgis-js-api": "^4.10.0"
+  "devDependencies": {
+    "@types/arcgis-js-api": "^4.14.0",
+    "typescript": "^3.8.2"
   }
 }
