--- a/2020/Intro-to-TypeScript/demo/livedemo/tsconfig.json
+++ b/2020/Intro-to-TypeScript/demo/livedemo/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "es2015.promise", "es5"],
-    "module": "amd", // output files as AMD modules
-    "sourceMap": true,
-    "target": "es5",
+    "module": "amd",
     "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "jsx": "react",
+    "jsxFactory": "tsx",
+    "target": "es5",
+    "experimentalDecorators": true,
+    "preserveConstEnums": true,
+    "suppressImplicitAnyIndexErrors": true
+  },
+  "include": [
+    "./app/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
